src/test/deca/context/invalid/with-object/redefinition_method.deca
class A{
    int x;
}

class B extends A{
    void x(){
        println("Hello World!");
    }
}